--- a/frontend/h4h/android/app/build.gradle
+++ b/frontend/h4h/android/app/build.gradle
@@ -69,3 +69,10 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
+
+// added by leo for google maps
+android {
+    defaultConfig {
+        minSdkVersion 20
+    }
+}
