--- a/backend/.env-sample
+++ b/backend/.env-sample
@@ -1,16 +1,14 @@
-<!-- 
+# This file is an sample and will not do anything
 
-Example loading:
-------
-import os
-from dotenv import load_dotenv
+# Example loading:
+#
+# import os
+# from dotenv import load_dotenv
 
+# load_dotenv()
+# print(os.environ.get('GOOGLE_TOKEN')) 
+#
+# will need ti be called ".env"
 
-load_dotenv()
-print(os.environ.get('GOOGLE_TOKEN')) 
-------
-will need ti be called ".env"
-
--->
 
 GOOGLE_TOKEN="null"
