--- a/frontend/h4h/pubspec.yaml
+++ b/frontend/h4h/pubspec.yaml
@@ -39,8 +39,9 @@ dependencies:
   hive: ^2.2.3
   hive_generator: ^2.0.0
   hive_flutter: ^1.1.0
-  flutter_map: ^3.1.0
+  flutter_map: ^2.2.0
   google_maps_flutter: ^2.2.3
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
