Remove iconPoints and make time start and end

--- a/backend/.env-sample
+++ b/backend/.env-sample
@@ -1,14 +1,13 @@
 # This file is an sample and will not do anything
 
 # Example loading:
-#
-# import os
-# from dotenv import load_dotenv
 
-# load_dotenv()
-# print(os.environ.get('GOOGLE_TOKEN')) 
-#
-# will need ti be called ".env"
+# >>> import os
+# >>> from dotenv import load_dotenv
+# >>> load_dotenv()
+# >>> print(os.environ.get('GOOGLE_TOKEN')) 
+
+# will need to be called ".env"
 
 
 GOOGLE_TOKEN="null"
