--- a/frontend/h4h/pubspec.yaml
+++ b/frontend/h4h/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   intl: ^0.18.0
   qr_flutter: ^4.0.0
   flutter_barcode_scanner: ^2.0.0
+  image: ^4.0.15
 
 dev_dependencies:
   flutter_test:
