--- a/frontend/h4h/pubspec.yaml
+++ b/frontend/h4h/pubspec.yaml
@@ -39,12 +39,12 @@ dependencies:
   hive: ^2.2.3
   hive_generator: ^2.0.0
   hive_flutter: ^1.1.0
-  flutter_map: ^3.1.0
   google_maps_flutter: ^2.2.3
   intl: ^0.18.0
   qr_flutter: ^4.0.0
   flutter_barcode_scanner: ^2.0.0
-  image: ^4.0.15
+  provider: ^6.0.5
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
